--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,11 @@ body {
     color: white;
     margin: 0;
     padding: 0;
+    grid-template-areas: 
+    'header header header'
+    'section section section'
+    'footer footer footer';
+    display: flex;
 }
 
 header {
