--- a/css/about.css
+++ b/css/about.css
@@ -1,60 +1,9 @@
 body {
-    font-family: Arial, sans-serif;
-    text-align: center;
-    background: url('../misc/airplane.jpg') no-repeat center center fixed;
-    background-size: cover;
-    color: white;
-    margin: 0;
-    padding: 0;
-    display: grid;
-    grid-template: repeat(auto-fit, minmax(250px, 1fr));
+    margin-top: 50%;
 }
 
-header {
-    position: fixed;
-    width: 100%;
-    top: 0;
-    left: 0;
-    background: rgba(0, 0, 0, 0.7);
-    box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
-    transition: all 0.3s ease;
-    z-index: 1000;
-}
-
-header h1 {
-    font-size: 2rem;
-    transition: all 0.3s ease;
-    text-shadow: gold 1px 1px;
-}
-
-.scrolled {
-    padding: 10px;
-    text-align: left;
-}
-
-.scrolled h1 {
-    font-size: 1.5rem;
-    margin-left: 20px;
-}
-
-.scrolled p {
-    font-size: 0rem;
-    margin-left: 0; 
-}
-
-.scrolled a {
-    display: none;
-}
-
-.nav {
-    font-family: Georgia, 'Times New Roman', Times, serif;
-
-}
-
-a {
-    color: yellow;
-    text-decoration: none;
-    padding: 10px;
+h2 {
+    margin-top: 15%;
 }
 
 /* Responsivitet */
@@ -129,11 +78,7 @@ button:hover {
     height: 12rem;
     border-radius: 10px;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
-
-
-}
-
-
+    }
 }
 
 .destination-box img {
@@ -141,7 +86,6 @@ button:hover {
     height: 12rem;
     border-radius: 10px;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
-
 }
 
 
