--- a/css/about.css
+++ b/css/about.css
@@ -17,6 +17,7 @@ h2 {
     display: flex;
     flex-direction: column;
     gap: 40px;
+    text-shadow: 3px 2px 3px black;
 }
 
 .about-section {
@@ -24,6 +25,7 @@ h2 {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    
 }
 
 .about-image img {
@@ -36,10 +38,16 @@ h2 {
 .about-text {
     max-width: 800px;
     margin-top: 20px;
+    list-style-type: none;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
 }
 
 .testimonials {
     margin-top: 50px;
+    text-shadow: 3px 2px 3px black;
 }
 
 .testimonial-container {
