--- a/css/styles.css
+++ b/css/styles.css
@@ -1,9 +1,10 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background: url('../misc/airplane.jpg') no-repeat center center fixed;
-    background-size: cover;
+    background: no-repeat center center fixed;
+    background-size:cover;
     color: white;
+    background-image: url('../misc/airplane.jpg');
     margin: 0;
     padding: 0;
     display: grid;
@@ -56,6 +57,10 @@ a {
     display: none;
 }
 
+
+ul {
+    list-style-type:none;
+}
 
 /* Footer */
 footer {
