--- a/css/travels.css
+++ b/css/travels.css
@@ -36,18 +36,20 @@ header h1 {
 }
 
 .Places-grid {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); /* Adjusted for better responsiveness */
+    /* display: grid; */
+    /* grid-template-columns: repeat(auto-fit, minmax(300px, 1fr)); Adjusted for better responsiveness */
     gap: 20px;
     padding: 40px;
-    max-width: 1200px;
-    margin: auto;
+    max-width: 600px;
+    margin-left: auto;
+    margin-right: auto;
+    
 }
 
 .destination-content {
-    display: flex;
+    display:flex;
     flex-direction: column;
-    align-items: center;
+    align-content: center;
     text-align: center;
 }
 
@@ -56,11 +58,16 @@ header h1 {
     height: auto;
     border-radius: 10px;
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
+    
 }
 
 .destination-info {
     max-width: 800px;
     margin-top: 20px;
+    background: rgba(0, 0, 0, 0.7);
+    padding: 20px;
+    border-radius: 10px;
+    box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.3);
 }
 
 .destination-facts {
